# learnopengl-gfxrs

./: Cargo.toml
src/01-getting-started/103-hello-window/: main.rs
src/01-getting-started/104-hello-triangle-revised/: main.rs
src/01-getting-started/105-shaders/: main.rs  model.rs  render.rs
src/01-getting-started/106-textures/: main.rs  render.rs
src/01-getting-started/107-transformations/: main.rs
src/01-getting-started/109-camera/: main.rs
src/02-lighting/201-colors/: camera.rs  main.rs  model.rs  render.rs
src/02-lighting/201-colors/render/: light.rs  mod.rs  object.rs
src/02-lighting/201-colors/shader/: obj_fragment.glsl  vertex.glsl
src/02-lighting/202-basic-lighting/: camera.rs  main.rs  main_view.rs  model.rs  render.rs  render_view.rs
src/02-lighting/202-basic-lighting-revised/: camera.rs  context.rs  main.rs
src/02-lighting/202-basic-lighting-revised/system/: camera.rs
src/02-lighting/202-basic-lighting/shader/: obj_fragment.glsl  obj_fragment.view.glsl  vertex.view.glsl
src/02-lighting/203-materials/: context.rs  main.rs  render.rs
src/02-lighting/203-materials/shader/: obj_fragment.glsl  obj_vertex.glsl  vertex.glsl
src/02-lighting/203-materials/system/: camera.rs  mod.rs
src/02-lighting/204-lighting-maps/: context.rs  main.rs  model.rs  render.rs
src/02-lighting/204-lighting-maps/shader/: light_vertex.glsl  obj_fragment.glsl  obj_vertex.glsl
src/02-lighting/204-lighting-maps/system/: camera.rs
src/02-lighting/206-multiple-lights/: camera.rs  context.rs  main.rs  model.rs  render.rs
src/02-lighting/206-multiple-lights/shader/: fragment.glsl  vertex.glsl
src/02-lighting/206-multiple-lights/system/: camera.rs  mod.rs
src/103-hello-window/: main.rs
src/104-hello-triangle/: main.rs
src/104-hello-triangle-revised/: main.rs  model.rs  render.rs
src/105-shaders/: main.rs
src/105-shaders/shader/: fragment.glsl
src/106-textures/: main.rs  model.rs  render.rs
src/106-textures/shader/: fragment.glsl
src/107-transformations/: main.rs  model.rs  render.rs
src/107-transformations/shader/: fragment.glsl  vertex.glsl
src/107-translations/: model.rs  render.rs
src/107-translations/shader/: fragment.glsl  vertex.glsl
src/108-coordinate/: main.rs  model.rs
src/109-camera/: camera.rs  main.rs  render.rs
src/109-camera/shader/: vertex.glsl
