[package]
name = "learnopengl-gfxrs"
version = "0.1.0"
authors = ["solarsail <newleaf.lu@gmail.com>"]

[dependencies]
gfx = "0.16"
glutin = "0.9"
gfx_window_glutin = "0.17"
image = "0.15"
cgmath = "0.15"
find_folder = "0.3"

[[bin]]
name = "hello-window"
path = "src/103-hello-window/main.rs"

[[bin]]
name = "hello-triangle"
path = "src/104-hello-triangle/main.rs"

[[bin]]
name = "hello-triangle-revised"
path = "src/104-hello-triangle-revised/main.rs"

[[bin]]
name = "shaders"
path = "src/105-shaders/main.rs"

[[bin]]
name = "textures"
path = "src/106-textures/main.rs"

[[bin]]
name = "transformations"
path = "src/107-transformations/main.rs"

[[bin]]
name = "coordinate"
path = "src/108-coordinate/main.rs"

[[bin]]
name = "camera"
path = "src/109-camera/main.rs"